Adicionando alteracoes solicitadas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h3>
-  My Skills
-</h3>
-
-<app-dashboard></app-dashboard>
+  <div class='container'>
+    
+    <mat-toolbar  class="mat-elevation-z8">
+      <span>my skills.</span>
+    </mat-toolbar>
+    <app-dashboard></app-dashboard>
+</div>
