--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,200');
+
 p {
-  font-family: Lato;
+    font-family: 'Raleway', sans-serif;
+}
+body{
+    background-color: rgba(247, 247, 247, 0.938);
+}
+
+mat-toolbar{
+    background-color:  #306B71;
+    color: white;
+    font-weight: bold;
 }
 
