--- a/src/app/dashboard/card/card.component.html
+++ b/src/app/dashboard/card/card.component.html
@@ -1,4 +1,5 @@
-<mat-card class="example-card">
+
+<mat-card center class="example-card">
   <mat-card-header>
     <mat-card-title>{{card.name}}</mat-card-title>
   </mat-card-header>
@@ -8,8 +9,11 @@
       {{card.description}}
     </p>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE {{card.likes}}</button>
-    <button mat-button>SHARE</button>
+  <mat-card-actions class="buttons">
+    <button mat-raised-button color="{{color}}" (click)="onLike(card)"
+      matBadge="{{card.likes}}"  
+      matBadgePosition="after" 
+      matBadgeColor="{{colorBadge}}">LIKE</button>
+    <button id="share-button" mat-raised-button color="link" (click)="onShare()">SHARE</button>
   </mat-card-actions>
 </mat-card>
