--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,4 @@
-<!--TODO: melhorar o layout dos cards para exibir ao menos 2 por linha em telas > md, e pequenas (sm) 1
-https://i.pinimg.com/originals/c7/4e/30/c74e3049300cc10c3c0dc0abc9d6e404.gif
-GIF MURAH:
-https://media.giphy.com/media/WrfyieYvb5h016OqDc/giphy.gif
-https://media.giphy.com/media/J4CpWyxRegqxb1GSsK/giphy.gif
-https://media.giphy.com/media/kdp7L38rUViMiSvSzm/giphy.gif
--->
+<!--TODO: melhorar o layout dos cards para exibir ao menos 2 por linha em telas > md, e pequenas (sm) 1-->
 
 <img class="loading" *ngIf="loading" src='https://media.giphy.com/media/WrfyieYvb5h016OqDc/giphy.gif'>
 <div fxFlex fxLayout="column" >
