--- a/src/app/dashboard/card/card.component.css
+++ b/src/app/dashboard/card/card.component.css
@@ -8,15 +8,26 @@
   transition: all 250ms ease-out;
   z-index: 1;
   overflow: hidden;
-  border-radius: 12px;
+  border-radius: 0.25rem;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
   font-family: 'Raleway', sans-serif;
 }
 
 img{
+  width: 400px;
+  height: 280px;
   max-width: 95%;
   max-height: 95%;
-  margin-left: 1px;
+
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+  filter: contrast(70%);
+  overflow: hidden;
+  position: relative;
+
 }
 
 
